Integrated swagger csr-ftoken authentication
