# Modules/Auth/app/Http/Controllers/AuthenticatedSessionController.php
@@ -18,31 +18,32 @@ use Modules\Auth\Http\Requests\LoginRequest;
  */
 class AuthenticatedSessionController extends Controller
 {
-   /**
- * @OA\Post(
- *     path="/api/v1/login",
- *     tags={"Auth"},
- *     summary="Login user",
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\JsonContent(
- *             @OA\Property(property="email", type="string"),
- *             @OA\Property(property="password", type="string")
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Successful operation"
- *     ),
- *     @OA\Response(
- *         response=422,
- *         description="These credentials do not match our records"
- *     )
- * )
- */
+    /**
+     * @OA\Post(
+     *     path="/api/v1/login",
+     *     tags={"Auth"},
+     *     summary="Login user",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="email", type="string"),
+     *             @OA\Property(property="password", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Successful operation"
+     *     ),
+     * 
+     *     @OA\Response(
+     *         response=422,
+     *         description="These credentials do not match our records"
+     *     )
+     * )
+     */
     public function store(LoginRequest $request): Response
     {
-           
+
         $request->authenticate();
         $request->session()->regenerate();
         //session()->regenerate();
@@ -50,8 +51,23 @@ class AuthenticatedSessionController extends Controller
         return response()->noContent();
     }
 
+
+
     /**
-     * Destroy an authenticated session.
+     * @OA\Post(
+     *     path="/api/v1/logout",
+     *     tags={"Auth"},
+     *     summary="Logout",
+     *     @OA\Response(
+     *         response=204,
+     *         description="Successful operation"
+     *     ),
+     * 
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated"
+     *     )
+     * )
      */
     public function destroy(Request $request): Response
     {
